Changed List.of() to Collections.emptyList() and added the required import as per review comment